--- a/nowstagram/nowstagram/app.conf
+++ b/nowstagram/nowstagram/app.conf
@@ -1,2 +1,8 @@
 SQLALCHEMY_DATABASE_URI = 'mysql://root:hero1234HERO@localhost:3306/test'
 SQLALCHEMY_TRACK_MODIFICATIONS = True
+UPLOAD_DIR='C:/Users/wangtuanfei/Desktop/newcoder/upload/'
+ALLOWED_EXIT=set(['png','jpg','jpeg','bmp','gif'])
+QINIU_ACCESS_KEY='SjKF-2OeaBNN-nEZD8cG1NoRClB-Ra-TOZ-K-REX'
+QINIU_SECRET_KEY='VuQxvMLSJUgOXSAAsNxCjIM0r4pjFfx8u1c6_CvT'
+QINIU_BUCKET_NAME='nowstagram'
+QINIU_DOMAIN_PREFIX='http://oa36y1lrn.bkt.clouddn.com/'
