--- a/nowstagram/nowstagram/app.conf
+++ b/nowstagram/nowstagram/app.conf
@@ -6,3 +6,10 @@ QINIU_ACCESS_KEY='SjKF-2OeaBNN-nEZD8cG1NoRClB-Ra-TOZ-K-REX'
 QINIU_SECRET_KEY='VuQxvMLSJUgOXSAAsNxCjIM0r4pjFfx8u1c6_CvT'
 QINIU_BUCKET_NAME='nowstagram'
 QINIU_DOMAIN_PREFIX='http://oa36y1lrn.bkt.clouddn.com/'
+
+FLASKY_MAIL_SENDER = '1437366527@qq.com'
+MAIL_SERVER = 'smtp.qq.com'
+MAIL_PORT = 465
+MAIL_USE_SSL = True
+MAIL_USERNAME = '1437366527'
+MAIL_PASSWORD = 'jlkracrkcftxiifa'
